--- a/html_templates/index.html
+++ b/html_templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -97,9 +97,7 @@
               <div class="control">
                 <button class="button is-link is-light cancel-button">Cancel</button>
               </div>
-            </div>
-            
-
+            </div> 
         </div>
         <button class="modal-close is-large" aria-label="close"></button>
       </div>
@@ -135,8 +133,10 @@
         <button class="modal-close is-large" aria-label="close"></button>
       </div>
     </div>
+
+
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> 
-      <script src = "/assets/js/gratitude.js"></script>
+      <script src = "gratitude.js"></script>
   </body>
 </html>
