footer added to main.handlebars

--- a/html_templates/index.html
+++ b/html_templates/index.html
@@ -58,6 +58,12 @@
 
             <article class="message">
               <div class="message-body is-italic">
+                I scored 3 goals in footy and we had fish and chips for dinner.
+               </div>
+            </article>
+
+            <article class="message">
+              <div class="message-body is-italic">
                The weather is beautiful today. I had a nice long run today. Feel so much better for it.
                </div>
             </article>
@@ -132,6 +138,15 @@
       </div>
         <button class="modal-close is-large" aria-label="close"></button>
       </div>
+
+      <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Gratitude Journal</strong>
+          </p>
+          <p>© 2020</p>
+        </div>
+      </footer>
     </div>
 
 
