--- a/html_templates/newgratitude.html
+++ b/html_templates/newgratitude.html
@@ -52,6 +52,11 @@
             </article>
             <article class="message">
               <div class="message-body is-italic">
+                I scored 3 goals in footy and we had fish and chips for dinner.
+               </div>
+            </article>
+            <article class="message">
+              <div class="message-body is-italic">
                We received an A+ on project 2.
                </div>
             </article>
